--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,6 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: psba-drm
 */
+
+@import "global";
+@import "top";
