--- a/style.css
+++ b/style.css
@@ -10,3 +10,80 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: psba-drm
 */
+body {
+  background: url("images/bg.png");
+}
+
+main {
+  padding: 16px 0;
+}
+
+main > .container {
+  background: #fff;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22), 0 14px 56px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22), 0 14px 56px rgba(0, 0, 0, 0.25);
+}
+
+.navbar {
+  background: #212529;
+}
+
+.nav-item:hover, .nav-item.active {
+  background: url("images/bg.png");
+}
+
+.front-page-banners {
+  border-top: 12px solid #fff;
+  border-bottom: 12px solid #fff;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.front-page-banners:after, .front-page-banners:before {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  border-top: 10px solid #dc3545;
+  left: 0;
+  right: 0;
+}
+
+.front-page-banners:before {
+  top: -11px;
+}
+
+.front-page-banners:after {
+  bottom: -11px;
+}
+
+.front-page-tabs .nav-item:hover, .front-page-tabs .nav-item.active {
+  background: none;
+}
+
+.site-header {
+  background: none;
+}
+
+.site-title {
+  font-weight: 900;
+  font-size: 2.25em;
+}
+
+.site-title .subtitle {
+  color: #ffe7a0;
+  display: block;
+  font-weight: 700;
+}
+
+.site-header--main {
+  background-position: bottom center;
+  background-size: cover;
+}
+
+.site-logo,
+.site-secondary-logo {
+  margin: 20px auto;
+  max-width: 87px;
+  -webkit-animation: none !important;
+          animation: none !important;
+}
